<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colorRed">

    <EditText
        android:id="@id/txtSetFrag_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@id/bttnGetFrag_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttnGetValue" />

        <Button
            android:id="@id/bttnSetFrag_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttnSetValue" />

    </LinearLayout>

</LinearLayout>